--- a/projects.html
+++ b/projects.html
@@ -744,7 +744,7 @@
                             <p>A responsive and modern portfolio website designed with HTML, CSS, and JavaScript to showcase personal projects, skills, and certifications.</p>
                              <div class="project-links">
                                 <a href="https://github.com/Theshuklanurag" target="_blank" class="btn-secondary">View Code</a>
-                                <a href="#" target="_blank" class="btn">Live Demo</a>
+                                <a href="https://theshuklanurag.github.io/portfolio/" target="_blank" class="btn">Live Demo</a>
                             </div>
                         </div>
                     </div>
@@ -913,4 +913,5 @@
         });
     </script>
 </body>
+
 </html>
