--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <a href="contact.html" class="btn">Get In Touch</a>
                 </div>
                 <div class="hero-image">
-                    <img src="C:\Users\thesh\OneDrive\Desktop\Portfolio\WhatsApp Image 2025-04-24 at 13.25.06_45979be0.jpg" alt="Anurag Shukla">
+                    <img src="WhatsApp Image 2025-04-24 at 13.25.06_45979be0.jpg" alt="Anurag Shukla">
                 </div>
             </div>
         </section>
@@ -582,4 +582,5 @@
     </script>
 </body>
 </html>
+
 
