--- a/about.html
+++ b/about.html
@@ -692,7 +692,7 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-flex">
                     <div class="about-image">
-                        <img src="C:\Users\thesh\OneDrive\Desktop\Portfolio\WhatsApp Image 2025-04-24 at 13.25.06_45979be0.jpg" alt="A photo of Anurag Shukla">
+                        <img src="WhatsApp Image 2025-04-24 at 13.25.06_45979be0.jpg" alt="A photo of Anurag Shukla">
                     </div>
                     <div class="about-text">
                         <h3>Passionate Developer & Lifelong Learner</h3>
@@ -702,7 +702,7 @@
                         <p>
                             When I'm not coding, you can find me exploring the latest tech trends, contributing to open-source projects, or enjoying a good cup of coffee. I believe in the power of technology to make a positive impact, and I'm always looking for opportunities to collaborate on exciting projects.
                         </p>
-                        <a href="C:\Users\thesh\OneDrive\Desktop\Portfolio\Anurag Shukla Resume.pdf" class="btn" download>Download Resume</a>
+                        <a href="Anurag Shukla Resume.pdf" class="btn" download>Download Resume</a>
                     </div>
                 </div>
             </div>
@@ -868,4 +868,5 @@
         });
     </script>
 </body>
+
 </html>
